--- a/src/CSS/header.css
+++ b/src/CSS/header.css
@@ -64,7 +64,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #172B47;
+    color: #282828;
 }
 .div-login-header {
     margin-left: 3rem;
@@ -94,7 +94,7 @@
     border-bottom: 2px solid #E61A45;
 }
 .home-2 {
-    color: #172B47 !important;
+    color: #282828 !important;
     background: #f5f5f5;
     font-weight: 600 !important;
     outline: none;
@@ -127,7 +127,7 @@
     width: 100%;
     cursor: pointer !important;
     font-family: Roboto, serif;
-    color: #172B47 !important;
+    color: #282828 !important;
     font-size: 16px !important;
     font-weight: 600 !important;
     border: none;
