--- a/src/CSS/login.css
+++ b/src/CSS/login.css
@@ -36,7 +36,7 @@
 .main-login {
     width: 32%;
     background-color: #FFFFFF;
-    color: #172B47;
+    color: #282828;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     opacity: 0;
