--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ a {
     text-decoration: inherit;
 }
 
+#root {
+    background-color: #FFF;
+}
+
 a:hover {
     color: #535bf2;
 }
